clean Product stuff and add styleint

--- a/src/products/kommandr/v1.md
+++ b/src/products/kommandr/v1.md
@@ -8,13 +8,13 @@ product:
   -
     name: "Kommandr"
     icon: "./images/icon.svg"
-    cta: "Get the Extension"
-    primary:
+    hero:
       -
         title: "Kommandr"
         text: "Hundreds of simple commands, right at your fingertips."
+        cta: "Get the Extension"
         image: "./images/splash-screen.png"
-    secondary:
+    facets:
       -
         title: "At your service"
         text: "Just start typing. Kommandr will start making suggestions. From screenshots, to notes, to bookmarks. Do at all with a few taps of the keyboard."
