--- a/src/products/project-template/v1.md
+++ b/src/products/project-template/v1.md
@@ -1,30 +1,26 @@
 ---
-title: "Version 1"
+title: "Project Template V1"
 description: "Lorem Ipsum Dolor Sit Amet"
-date: "2017-08-21"
-contact: "jgruen@mozilla.com"
+date: "2010-10-15"
+contact: "Your Email Here"
 
 product:
   -
-    name: "Flow"
+    name: "Product Name Here"
     icon: "./images/icon.svg"
     hero:
       -
-        title: "Kommandr"
-        text: "Hundreds of simple commands, right at your fingertips."
-        cta: "Get the Extension"
-        image: "./images/splash-screen.png"
+        title: "Key Value Title"
+        text: "Key Value Description"
+        cta: "Key Value CTA"
+        image: "./images/hero.png"
     facets:
       -
-        title: "At your service"
-        text: "Just start typing. Kommandr will start making suggestions. From screenshots, to notes, to bookmarks. Do at all with a few taps of the keyboard."
-        image: "./images/splash-screen-2.png"
+        title: "Value Facet Title"
+        text: "Value Facet Description"
+        image: "./images/facet-white.png"
       -
-        title: "Here Comes Everybody"
-        text: "Integrate with all your favorite apps. Want a send a message with Facebook, or save a page to Evernote? We've got you covered?"
-        image: "./images/splash-screen-3.png"
-      -
-        title: "Keep Connected"
-        text: "Kommandr makes it easy to send sites and files to all your devices so they're there when you need them."
-        image: "./images/splash-screen-4.png"
+        title: "Value Facet Title"
+        text: "Value Facet Description"
+        image: "./images/facet-blue.png"
 ---
