--- a/src/products/Scrapbook/v2.md
+++ b/src/products/Scrapbook/v2.md
@@ -21,7 +21,7 @@ product:
         image: "./images/facet-white.png"
       -
         title: "Personalized suggestions based on affinity"
-        text: ""Other people are looking at” and “other people are searching for” maps relevant sites on your mind map. Use it to dive deeper into the topics you care about.
+        text: "Other people are looking at” and “other people are searching for” maps relevant sites on your mind map. Use it to dive deeper into the topics you care about."
         image: "./images/facet-blue.png"
       -
         title: "Collaborate with others"
