--- a/src/products/Scrapbook/v2.md
+++ b/src/products/Scrapbook/v2.md
@@ -1,5 +1,5 @@
 ---
-title: "Scrapbook v2: Theme-Based Auto-Clustering"
+title: "Scrapbook v2: BrowseMap, Theme-Based Auto-Clustering"
 description: "Visual clustering of your web browsing"
 date: "2010-10-16"
 contact: "jcramer@mozilla.com"
