--- a/src/products/good-browser/v2.md
+++ b/src/products/good-browser/v2.md
@@ -1,6 +1,6 @@
 ---
-title: "Good Browser v2: Broadcast Your Cause"
-description: "lorem"
+title: "Good Browser v2"
+description: "Broadcast Your Cause"
 date: "2010-10-15"
 contact: "jcramer@mozilla.com"
 
