--- a/src/products/kommandr/v2.md
+++ b/src/products/kommandr/v2.md
@@ -11,8 +11,8 @@ product:
     hero:
       -
         title: "Commander"
-        text: "Access tons of powerful web shortcuts using everyday language. Just type what you want to do and we’ll figure out what you mean. You never have to remember the <quote>right</quote> command."
-        cta: "Get the Extension"
+        text: "Access tons of powerful web shortcuts using everyday language. Just type what you want to do and we’ll figure out what you mean. You never have to remember the right command."
+        cta: "Get Commander"
         image: "./images/splash-screen.png"
     facets:
       -
