--- a/src/products/good-browser/v1.md
+++ b/src/products/good-browser/v1.md
@@ -1,6 +1,6 @@
 ---
-title: "Good Browser v1: Make Meaningful Connection"
-description: ""
+title: "Good Browser v1"
+description: "Make Meaningful Connections"
 date: "2010-10-15"
 contact: "jcramer@mozilla.com"
 
