fix markdown nits

--- a/src/products/Scrapbook/v2.md
+++ b/src/products/Scrapbook/v2.md
@@ -1,6 +1,6 @@
 ---
-title: "Scrapbook v2: BrowseMap, Theme-Based Auto-Clustering"
-description: "Visual clustering of your web browsing"
+title: "Scrapbook v2"
+description: "BrowseMap: Theme-Based Auto-Clustering"
 date: "2010-10-16"
 contact: "jcramer@mozilla.com"
 
