--- a/src/products/Scrapbook/v3.md
+++ b/src/products/Scrapbook/v3.md
@@ -1,6 +1,6 @@
 ---
-title: "Scrapbook v3: MyMap, Web Research Tool to Dive Deeper"
-description: "Visual clustering of your web browsing"
+title: "Scrapbook v3"
+description: "MyMap: Web Research Tool to Dive Deeper"
 date: "2010-10-16"
 contact: "jcramer@mozilla.com"
 
@@ -11,13 +11,13 @@ product:
     hero:
       -
         title: "Visual mapping of your web browsing"
-        text: "esearching a specific interest? Get a mind map of the web sites and resources you visit and save. The map will visualize by clustering sub-topics and generating suggestions by affinity."
-        cta: "Get my MyMap"
+        text: "Researching a specific interest? Get a mind map of the web sites and resources you visit and save. The map will visualize by clustering sub-topics and generating suggestions by affinity."
+        cta: "Get MyMap"
         image: "./images/hero.png"
     facets:
       -
         title: "Surface themes"
-        text: "MyMap auto-categorizes and clusters the sites you visit. You don’t have to organize anything. Just take away insights about your browsing behavior."
+        text: "MyMap auto-categorizes and clusters the sites you visit. You don’t have to organize anything to take away insights about your browsing behavior."
         image: "./images/facet-white.png"
       -
         title: "Short-term memory aid"
