--- a/src/products/flow/v2.md
+++ b/src/products/flow/v2.md
@@ -10,18 +10,18 @@ product:
     icon: "./images/icon.svg"
     hero:
       -
-        title: "All your notes and bookmarks in one flipbook"
-        text: "A flip-book with all your notes, bookmarks, and Pocket saves, with easy to access cards. A pleasure to organize, scan, search, and find what you need."
+        title: "Stay in your flow"
+        text: "Stop interrupting what you're doing to look up information. Flow smartly gets just the data you need, when you need it."
         cta: "Preview Flow"
         image: "./images/hero.png"
     facets:
       -
-        title: "Stay in your flow"
-        text: "Stop interrupting what you're doing to look up information. Flow smartly gets just the data you need, when you need it."
+        title: "All your notes and bookmarks in one flipbook"
+        text: "A smart flip-book with all your notes, bookmarks, and Pocket saves, with easy to access cards. A pleasure to organize, scan, search, and find what you need."
         image: "./images/facet-white.png"
       -
-        title: "Digital or analog"
-        text: "Everything you save to Flow is easy to search and find--even handwritten notes. Search anything from images to the text within them."
+        title: "Everything searchable"
+        text: "Everything you save to Flow is easy to search and find--even handwritten notes. With smart image, text, and audio recognition, you can search anything from screenshots to handwritten notes and audio recordings."
         image: "./images/facet-blue.png"
       -
         title: "Auto-catogorization, your way"
