--- a/src/products/quantifier/v2.md
+++ b/src/products/quantifier/v2.md
@@ -10,7 +10,7 @@ product:
     icon: "./images/icon.svg"
     hero:
       -
-        title: Get your web superpower
+        title: "Get your web superpower"
         text: "Use interactive tools to shape your web experience. You can find out how to optimize site performance, avoid security pitfalls, and learn more about the workings of the web that you might not normally see or even think about."
         cta: "Get Quantifier"
         image: "./images/hero.png"
@@ -20,11 +20,11 @@ product:
         text: "Apply Quantifier X-Ray vision to your browsing experience. You don’t have to be a developer to see how each part of a page is working."
         image: "./images/facet-white.png"
       -
-        title: Optimize your web experience"
+        title: "Optimize your web experience"
         text: "Tweak Quantifier settings to optimize your time online: you can altogether avoid poorly performing sites and streamline your experience, or you can roll your sleeves up to tool around and hack things for improvement."
         image: "./images/facet-blue.png"
       -
-        title: "join a cohort"
+        title: "Join a cohort"
         text: "Check out how others are tooling around and join them in homegrown projects. Have an idea of how to make Quantifier better? Pitch any projects to us to vet, and we’ll add the best ideas to Quantifier."
         image: "./images/facet-blue.png"
 ---
