--- a/src/products/Scrapbook/v3.md
+++ b/src/products/Scrapbook/v3.md
@@ -26,6 +26,7 @@ product:
       -
         title: "Get personalized suggestions based on affinity"
         text: "See what other people are looking at and searching for within your personal MyMap, and discover more of the web."
+        image: "./images/facet-blue.png"
       -
         title: "Share with others"
         text: "Share all or parts of your MyMap with others. They can add comments directly in your map, and pin their own suggestions, too."
