--- a/src/products/Scrapbook/v1.md
+++ b/src/products/Scrapbook/v1.md
@@ -13,22 +13,22 @@ product:
         title: "Make the web yours"
         text: "Collect and shape anything on the web. Put your personal spin on it with craft-like tools, then save or share."
         cta: "Get my Collage"
-        image: "./images/hero.png"
+        image: "./images/scrapbook-v1-hero.png"
     facets:
       -
         title: "Collect what you want"
         text: "Collage lets you grab images, text, links, video from the web. Need just the words from an image? Use the text extraction tool to grab the text—typed or written—from any screenshot. You can even select specific areas within a screenshot to get just what you want."
-        image: "./images/facet-white.png"
+        image: "./images/scrapbook-v1-facet-1.png"
       -
         title: "Put your spin on it"
         text: "Re-work any screenshot—edit the shape and add borders, write notes, draw on it, add stickers and filters."
-        image: "./images/facet-blue.png"
+        image: "./images/scrapbook-v1-facet-2.png"
       -
         title: "Collage, Assemblage, Bricolage..."
         text: "Assemble a Collage board using anything that you collect. You can mix and match pieces to create an inspired mood board or a professional assemblage—up to you!"
-        image: "./images/facet-blue.png"
+        image: "./images/scrapbook-v1-facet-3.png"
       -
         title: "Share, collaborate, message"
         text: "Share a Collage board or just a piece with friends, and invite them to collaborate. Use Collage messaging to share notes and ideas."
-        image: "./images/facet-blue.png"
+        image: "./images/scrapbook-v1-facet-4.png"
 ---
