--- a/src/products/flow/v1.md
+++ b/src/products/flow/v1.md
@@ -7,28 +7,28 @@ contact: "jcramer@mozilla.com"
 product:
   -
     name: "Flow"
-    icon: "./images/icon.svg"
+    icon: "./images/flow-v1-icon.svg"
     hero:
       -
         title: "All your notes and bookmarks in one visual timeline."
         text: "A beautiful flow of all your notes, bookmarks, and Pocket saves, in one visual timeline. A pleasure to organize, scan, and find what you need."
         cta: "Preview Flow"
-        image: "./images/hero.png"
+        image: "./images/flow-v1-hero.png"
     facets:
       -
         title: "Tag Categorize Prioritize"
         text: "Flow brings together different kinds of data that’s usually collected separately. You get a comprehensive view and the ability to organize in a way that makes perfect sense to you."
-        image: "./images/facet-white.png"
+        image: "./images/flow-v1-facet-1.png"
       -
         title: "Scan and Filter"
         text: "Everything you save to Flow is easy to find. Just flip through your timeline, or filter by categories and tags to quickly find just what you need."
-        image: "./images/facet-blue.png"
+        image: "./images/flow-v1-facet-2.png"
       -
         title: "Form and function"
         text: "Choose a color scheme to organize your Flow, or create one that suits you."
-        image: "./images/facet-white.png"
+        image: "./images/flow-v1-facet-3.png"
       -
         title: "It travels with you"
         text: "Access Flow across your devices. It’ll sync between your web browser and apps."
-        image: "./images/facet-blue.png"
+        image: "./images/flow-v1-facet-4.png"
 ---
