--- a/src/products/flow/v2.md
+++ b/src/products/flow/v2.md
@@ -1,34 +1,34 @@
 ---
 title: "Flow V2"
-description: "Smart connected AI rolodex with cards"
-date: "2010-10-16"
+description: "AI assistant to streamline your workflow"
+date: "2010-10-23"
 contact: "jcramer@mozilla.com"
 
 product:
   -
     name: "Flow"
-    icon: "./images/icon.svg"
+    icon: "./images/flow-v2-icon.svg"
     hero:
       -
         title: "Stay in your flow"
-        text: "Stop interrupting what you're doing to look up information. Flow smartly gets just the data you need, when you need it."
+        text: "Stop interrupting what you're doing to look up information. Flow gets you the data you need, when you need it."
         cta: "Preview Flow"
-        image: "./images/hero.png"
+        image: "./images/flow-v2-hero.png"
     facets:
       -
-        title: "All your notes and bookmarks in one flipbook"
-        text: "A smart flip-book with all your notes, bookmarks, and Pocket saves, with easy to access cards. A pleasure to organize, scan, search, and find what you need."
-        image: "./images/facet-white.png"
+        title: "Your personal assistant"
+        text: "Flow searches all of your notes, bookmarks, and Pocket saves. It's like a personal assistant for whatever you want to do on the web."
+        image: "./images/flow-v2-facet-1.png"
       -
         title: "Everything searchable"
-        text: "Everything you save to Flow is easy to search and find--even handwritten notes. With smart image, text, and audio recognition, you can search anything from screenshots to handwritten notes and audio recordings."
-        image: "./images/facet-blue.png"
+        text: "With automatic image, text, and audio recognition, Flow can search all data types. You can easily find anything you save, even handwritten notes, screenshots, and audio recordings."
+        image: "./images/flow-v2-facet-2.png"
       -
-        title: "Auto-catogorization, your way"
-        text: "Flow auto-tags all of your data. Want to create your own tags? Flow will re-organize to re-tag everything accordingly, in a way that makes perfect sense to you."
-        image: "./images/facet-white.png"
+        title: "Auto-categorization, your way"
+        text: "Flow auto-categorizes all of your data. Want to create your own tags? Flow will re-organize to re-tag everything accordingly."
+        image: "./images/flow-v2-facet-3.png"
       -
         title: "Flow wherever you go"
         text: "Access Flow across your devices. You'll stay in one flow, and in the know with helpful AI reminders and prompts."
-        image: "./images/facet-blue.png"
+        image: "./images/flow-v2-facet-4.png"
 ---
