--- a/src/products/home/v1.md
+++ b/src/products/home/v1.md
@@ -1,30 +1,34 @@
 ---
-title: "Home V3: Get It Now"
-description: "Site with an expiration date"
+title: "Home V1 Get Weird (Make the Web Weird Again)"
+description: "A Self-expression-first, flexible framework"
 date: "2010-10-16"
 contact: "Your Email Here"
 
 product:
   -
     name: "Home"
-    icon: "./images/icon.svg"
+    icon: "./images/home-v1-icon.svg"
     hero:
       -
-        title: "Planned site obsolescence, for good"
-        text: "Embrace a modern approach. Make a site with an expiration date. You can get more experimental while helping to reduce global digital waste."
+        title: "Your Voice, Your Web"
+        text: "Make your site extra with any kind of content you want, posted anywhere."
         cta: "Get your Home"
-        image: "./images/hero.png"
+        image: "./images/home-v1-hero.png"
     facets:
       -
-        title: "De-clutter your digital space"
-        text: "When you need a site for a specific time period (wedding site, digital files, school project), add a site expiration date. While the site will disappear, you’ll get a tidy archive of the site."
-        image: "./images/facet-white.png"
+        title: "Do Social, your way"
+        text: "Group, share, comment, and gather all your content, however you want."
+        image: "./images/home-v1-facet-1.png"
       -
-        title: "Get experimental"
-        text: "Want to try out a new idea? Try something new and see what happens. Into a specific topic at the moment? Re-make your site...you can always throw it away and make another one later."
-        image: "./images/facet-blue.png"
+        title: "Storify it"
+        text: "Tell your story with the content you love. Use the flexible story editor to bring in any content and put together a shareable narrative that your friends can interact with."
+        image: "./images/home-v1-facet-2.png"
       -
-        title: "Reduce your digital ecological footprint"
-        text: " The world is running out of data storage. Everything you store requires energy and resources. By creating a disposable site, you cut down your ecological footprint."
-        image: "./images/facet-blue.png"
+        title: "Make your mark"
+        text: "Write and sticker all over your site and your friends’ sites."
+        image: "./images/home-v1-facet-3.png"
+      -
+        title: "Custom code it"
+        text: "Want to add some chaos to your Home? Inject custom code anywhere."
+        image: "./images/home-v1-facet-4.png"
 ---
