--- a/src/products/quantifier/v1.md
+++ b/src/products/quantifier/v1.md
@@ -13,26 +13,26 @@ product:
         title: "Your time, your web. Get intentional."
         text: "Use the Quantifier dashboard and tools to use your time on the web intentionally."
         cta: "Get Quantifier"
-        image: "./images/hero.png"
+        image: "./images/quantifier-v1-hero.png"
     facets:
       -
         title: "See your web behavior"
         text: "Get a clear picture of how you currently spend time on the web, with our visual dashboard. You’ll get a snapshot of time spent on different sites, search activity, transactions, and more."
-        image: "./images/facet-white.png"
+        image: "./images/quantifier-v1-facet-1.png"
       -
         title: "Get intentional"
         text: "Use interactive tools to decide envision how you want to spend time on the web. You can even sync the dashboard with goals you set in other apps."
-        image: "./images/facet-blue.png"
+        image: "./images/quantifier-v1-facet-2.png"
       -
         title: "Check out your cohort"
         text: "Check out the goals of other people like you in your neighborhood and around the world. Check out visualizations of types of goals according to different demographics."
-        image: "./images/facet-blue.png"
+        image: "./images/quantifier-v1-facet-3.png"
       -
         title: "Track your daily progress"
         text: "Integrate Quantifier into your favorite browser homepage. Add a browser extension that signals how well you’re tracking for the day."
-        image: "./images/facet-blue.png"
+        image: "./images/quantifier-v1-facet-4.png"
       -
         title: "Celebrate the wins"
         text: "We’ll send you encouragement as you track toward your goals! Earn relevant rewards from local businesses along the way."
-        image: "./images/facet-blue.png"
+        image: "./images/quantifier-v1-facet-5.png"
 --- 
