--- a/src/products/good-browser/v1.md
+++ b/src/products/good-browser/v1.md
@@ -13,22 +13,22 @@ product:
         title: "Earn money for a good cause—just by surfing the web."
         text: "We’ll donate to it whenever you click on a browser ad."
         cta: "Get Started"
-        image: "./images/hero.png"
+        image: "./images/good-browser-v1-hero.png"
     facets:
       -
         title: "Support your cause"
         text: "Find an organization you want to support, then choose one of its current fundraising goals."
-        image: "./images/facet-white.png"
+        image: "./images/good-browser-v1-facet-1.png"
       -
         title: "Do it anytime, anywhere"
         text: "Earn money across all your devices. One extension does it all, securely. Just download once, and you’re set!"
-        image: "./images/facet-blue.png"
+        image: "./images/good-browser-v1-facet-2.png"
       -
         title: "Care better together"
         text: "Connect with local or global teams around your cause and organization. Track your team’s progress."
-        image: "./images/facet-blue.png"
+        image: "./images/good-browser-v1-facet-3.png"
       -
         title: "Share the good"
         text: "Share your cause with friends. And invite them to join!"
-        image: "./images/facet-blue.png"
+        image: "./images/good-browser-v1-facet-4.png"
 ---
