--- a/src/products/good-browser/v1.md
+++ b/src/products/good-browser/v1.md
@@ -7,7 +7,7 @@ contact: "jcramer@mozilla.com"
 product:
   -
     name: "Good Browser"
-    icon: "./images/icon.svg"
+    icon: "./images/good-browser-v1-icon.svg"
     hero:
       -
         title: "Earn money for a good cause—just by surfing the web."
