--- a/src/products/good-browser/v2.md
+++ b/src/products/good-browser/v2.md
@@ -7,28 +7,28 @@ contact: "jcramer@mozilla.com"
 product:
   -
     name: "Good Browser"
-    icon: "./images/icon.svg"
+    icon: "./images/good-browser-v2-icon.svg"
     hero:
       -
         title: "Wear your cause on the web"
         text: "Choose from curated, mission-driven campaigns. Wear and share your cause and earn money for your cause! It’s a win-win."
         cta: "Get Started"
-        image: "./images/hero.png"
+        image: "./images/good-browser-v2-hero.png"
     facets:
       -
         title: "Choose a cause"
         text: "We’ll curate timely campaigns from partners like Greenpeace, Committee to Protect Journalists, and more. Choose one to support for the month. Stick around to stay in the know about exciting mission-driven work happening now."
-        image: "./images/facet-white.png"
+        image: "./images/good-browser-v2-facet-1.png"
       -
         title: "Wear it, loud and proud"
         text: "Get an fun initiative badge to attach to your online profiles! Others can hover and click on it to learn about your initiative."
-        image: "./images/facet-blue.png"
+        image: "./images/good-browser-v2-facet-2.png"
       -
         title: "Get honorary memberships"
         text: "Get an honorary membership when you’re a top contributor to a campaign! That could mean a special invite or subscription or swag."
-        image: "./images/facet-blue.png"
+        image: "./images/good-browser-v2-facet-3.png"
       -
         title: "Nominate Partner Organizations"
         text: "Spearhead a mission-aligned organization that might benefit from Good Browser. Or apply to partner with Good Browser and join its network of companies, big and small, doing good on the Web."
-        image: "./images/facet-blue.png"
+        image: "./images/good-browser-v2-facet-4.png"
 ---
