--- a/src/products/kommandr/v2.md
+++ b/src/products/kommandr/v2.md
@@ -7,24 +7,24 @@ contact: "jcramer@mozilla.com"
 product:
   -
     name: "Commander"
-    icon: "./images/icon.svg"
+    icon: "./images/kommander-v2-icon.svg"
     hero:
       -
         title: "Commander"
         text: "Access tons of powerful web shortcuts using everyday language. Just type what you want to do and we’ll figure out what you mean. You never have to remember the right command."
         cta: "Get Commander"
-        image: "./images/splash-screen.png"
+        image: "./images/kommander-v2-hero.png"
     facets:
       -
         title: "Say what you mean"
         text: "Just type or say what you want to do with the page, and we’ll help you do it. Want to search for a word? Scroll to the bottom? Email the URL?  Just type it however you’d say it."
-        image: "./images/splash-screen-2.png"
+        image: "./images/kommander-v2-facet-1.png"
       -
         title: "Demystify commands"
         text: "You can also check out everything you can do with Commander using the command glossary. Get ideas on what shortcuts you’re not taking advantage of, and start using them to save time."
-        image: "./images/splash-screen-3.png"
+        image: "./images/kommander-v2-facet-2.png"
       -
         title: "Make your own shortcuts"
         text: "Have a shortcut you want but don’t see yet? Just add it to the glossary and we’ll make it just for you. When enough people create the same command, we’ll make it available for everyone."
-        image: "./images/splash-screen-4.png"
+        image: "./images/kommander-v2-facet-3.png"
 ---
