jc-second-images

--- a/src/products/good-browser/v1.md
+++ b/src/products/good-browser/v1.md
@@ -11,7 +11,7 @@ product:
     hero:
       -
         title: "Earn money for a good cause—just by surfing the web."
-        text: "We’ll donate to it whenever you click on a browser ad."
+        text: "We’ll donate to a cause you choose whenever you click on a browser ad."
         cta: "Get Started"
         image: "./images/hero.png"
     facets:
