--- a/src/products/good-browser/v2.md
+++ b/src/products/good-browser/v2.md
@@ -17,7 +17,7 @@ product:
     facets:
       -
         title: "Choose a cause"
-        text: "We’ll curate timely campaigns from partners like Greenpeace, Committee to Protect Journalists, and more. Choose one to support for the month. Stick around to stay in the know about exciting mission-driven work happening now."
+        text: "We’ll curate timely campaigns from partners like Code.org, Internet Archives, Women Who Code, Wikipedia, and Electric Frontier Foundation. Choose one to support for the month. Stick around to stay in the know about exciting mission-driven work happening now."
         image: "./images/facet-white.png"
       -
         title: "Wear it, loud and proud"
