update ui and tweak language

--- a/src/products/flow/v1.md
+++ b/src/products/flow/v1.md
@@ -1,5 +1,5 @@
 ---
-title: "Flow V1"
+title: "Version One"
 description: "All your notes and bookmarks in one visual timeline."
 date: "2010-10-16"
 contact: "jcramer@mozilla.com"
