--- a/src/products/flow/v2.md
+++ b/src/products/flow/v2.md
@@ -1,5 +1,5 @@
 ---
-title: "Flow V2"
+title: "Version Two"
 description: "AI assistant to streamline your workflow"
 date: "2010-10-23"
 contact: "jcramer@mozilla.com"
