--- a/src/products/good-browser/v1.md
+++ b/src/products/good-browser/v1.md
@@ -1,5 +1,5 @@
 ---
-title: "Good Browser v1"
+title: "Version One"
 description: "Make Meaningful Connections"
 date: "2010-10-15"
 contact: "jcramer@mozilla.com"
