--- a/src/products/good-browser/v2.md
+++ b/src/products/good-browser/v2.md
@@ -1,5 +1,5 @@
 ---
-title: "Good Browser v2"
+title: "Version Two"
 description: "Broadcast Your Cause"
 date: "2010-10-15"
 contact: "jcramer@mozilla.com"
