--- a/src/products/kommandr/v1.md
+++ b/src/products/kommandr/v1.md
@@ -1,23 +1,23 @@
 ---
-title: "Version 1"
-description: "Lorem Ipsum Dolor Sit Amet"
+title: "Version One"
+description: "Overview of service"
 date: "2017-08-21"
 contact: "jgruen@mozilla.com"
 
 product:
   -
-    name: "Kommandr"
+    name: "Commander"
     icon: "./images/icon.svg"
     hero:
       -
-        title: "Kommandr"
+        title: "Commander"
         text: "Hundreds of simple commands, right at your fingertips."
         cta: "Get the Extension"
         image: "./images/splash-screen.png"
     facets:
       -
         title: "At your service"
-        text: "Just start typing. Kommandr will start making suggestions. From screenshots, to notes, to bookmarks. Do at all with a few taps of the keyboard."
+        text: "Just start typing. Commander will start making suggestions. From screenshots, to notes, to bookmarks. Do at all with a few taps of the keyboard."
         image: "./images/splash-screen-2.png"
       -
         title: "Here Comes Everybody"
@@ -25,6 +25,6 @@ product:
         image: "./images/splash-screen-3.png"
       -
         title: "Keep Connected"
-        text: "Kommandr makes it easy to send sites and files to all your devices so they're there when you need them."
+        text: "Commander makes it easy to send sites and files to all your devices so they're there when you need them."
         image: "./images/splash-screen-4.png"
 ---
