--- a/src/products/kommandr/v2.md
+++ b/src/products/kommandr/v2.md
@@ -1,5 +1,5 @@
 ---
-title: "Commander V2: Natural language"
+title: "Natural language"
 description: "Natural language browser commands"
 date: "2018-10-17"
 contact: "jcramer@mozilla.com"
